force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Actual_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Actual_Delivery_Date__c</fullName>
    <inlineHelpText>When was the environment handed off?</inlineHelpText>
    <label>Actual Delivery Date</label>
    <type>Date</type>
</CustomField>