force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Additional_Comments__c</fullName>
    <inlineHelpText>Is there additional information that is relevant to TechExec?  
This will be displayed in the regular status reports for Environment Delivery.</inlineHelpText>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>