force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Additional_Database_Details__c.field-meta.xml
<CustomField>
    <fullName>agf__Additional_Database_Details__c</fullName>
    <inlineHelpText>Additional details related to the database portion of the environment request.</inlineHelpText>
    <label>Additional Database Details</label>
    <type>TextArea</type>
</CustomField>