force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Change_Request_s__c.field-meta.xml
<CustomField>
    <fullName>agf__Change_Request_s__c</fullName>
    <inlineHelpText>Location for the URL to any and all change requests logged against this environment order.
URLs should be entered one per line.</inlineHelpText>
    <label>Change Request(s)</label>
    <type>TextArea</type>
</CustomField>