force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Committed_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Committed_Delivery_Date__c</fullName>
    <inlineHelpText>Date upon which the Environments Office agrees to fill the request.</inlineHelpText>
    <label>Committed Delivery Date</label>
    <type>Date</type>
</CustomField>