force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Custom_PLSQL_Users__c.field-meta.xml
<CustomField>
    <fullName>agf__Custom_PLSQL_Users__c</fullName>
    <description>custom plsql users for the environment</description>
    <inlineHelpText>Enter the complete list of PLSQL users needed for this request if we are NOT opting for the standard list of users.  The DBAs will ensure this list of users is created and available for use.</inlineHelpText>
    <label>Custom PLSQL Users</label>
    <length>30</length>
    <type>Text</type>
</CustomField>