force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Database_Refresh_Requested__c.field-meta.xml
<CustomField>
    <fullName>agf__Database_Refresh_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the database to be refreshed from a stock image?</description>
    <label>Database Refresh Requested</label>
    <type>Checkbox</type>
</CustomField>