force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__DB_Schema_Request__c.field-meta.xml
<CustomField>
    <fullName>agf__DB_Schema_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Work request for the DB schema team.</inlineHelpText>
    <label>DB Schema Request</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Environment Orders (DB Schema Request)</relationshipLabel>
    <relationshipName>Environment_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>