force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Delivery_Sprint__c.field-meta.xml
<CustomField>
    <fullName>agf__Delivery_Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the sprint of the team that will be performing the final handoff to the customer.</description>
    <inlineHelpText>This is the sprint of the team that will be performing the final handoff to the customer.</inlineHelpText>
    <label>Delivery Sprint</label>
    <referenceTo>agf__ADM_Sprint__c</referenceTo>
    <relationshipLabel>Environment Orders</relationshipLabel>
    <relationshipName>Environment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>