force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Environment__c.field-meta.xml
<CustomField>
    <fullName>agf__Environment__c</fullName>
    <label>Environment</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>