force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Environment_Purpose__c.field-meta.xml
<CustomField>
    <fullName>agf__Environment_Purpose__c</fullName>
    <description>What is the primary use of the environment</description>
    <inlineHelpText>What is the primary use of the environment?</inlineHelpText>
    <label>Environment Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Functional Testing</fullName>
            </value>
            <value>
                <fullName>Upgrade Testing</fullName>
            </value>
            <value>
                <fullName>Workloads</fullName>
            </value>
            <value>
                <fullName>Stagger Testing</fullName>
            </value>
            <value>
                <fullName>Capacity expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>