force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Impact__c.field-meta.xml
<CustomField>
    <fullName>agf__Impact__c</fullName>
    <inlineHelpText>Particular measurable impact if this environment does not meet key delivery dates
ex:  delay in release, delay in feature delivery, etc.</inlineHelpText>
    <label>Impact</label>
    <type>TextArea</type>
</CustomField>