force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Internal_Services_Request__c.field-meta.xml
<CustomField>
    <fullName>agf__Internal_Services_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Work request for the Internal Services DBAs.</inlineHelpText>
    <label>Internal Services Request</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Environment Orders (Internal Services Request)</relationshipLabel>
    <relationshipName>Environment_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>