force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Network_Case__c.field-meta.xml
<CustomField>
    <fullName>agf__Network_Case__c</fullName>
    <inlineHelpText>Supportforce case for any network changes needed for this request</inlineHelpText>
    <label>Network Case</label>
    <type>Url</type>
</CustomField>