force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Network_Request__c.field-meta.xml
<CustomField>
    <fullName>agf__Network_Request__c</fullName>
    <label>Network Request</label>
    <type>TextArea</type>
</CustomField>