force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Organizational_Priority_Methods__c.field-meta.xml
<CustomField>
    <fullName>agf__Organizational_Priority_Methods__c</fullName>
    <label>Organizational Priority Methods</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>agf__Organizational_Priority_Value__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Quality &amp; Performance</fullName>
            </value>
            <value>
                <fullName>Innovate to Scale</fullName>
            </value>
            <value>
                <fullName>Deliver Chatter</fullName>
            </value>
            <value>
                <fullName>Accelerate Service Cloud</fullName>
            </value>
            <value>
                <fullName>Dominate the Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Drive The Platform</fullName>
            </value>
            <value>
                <fullName>Productivity of our team</fullName>
            </value>
            <value>
                <fullName>Productivity of our company</fullName>
            </value>
            <value>
                <fullName>Leadership,Communication, Culture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>