force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Organizational_Priority_Value__c.field-meta.xml
<CustomField>
    <fullName>agf__Organizational_Priority_Value__c</fullName>
    <description>FY11 Technology &amp; Products Organizational Values</description>
    <inlineHelpText>FY11 Technology &amp; Products Organizational Values</inlineHelpText>
    <label>Organizational Priority Values</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>