force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__POC__c.field-meta.xml
<CustomField>
    <fullName>agf__POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the point-of-contact for this request as identified by the customer.</inlineHelpText>
    <label>POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>