force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Release_Engineer__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the Release Engineer delivering this order?</inlineHelpText>
    <label>Release Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Environment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>