force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__RelEng_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__RelEng_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The RelEng work object supporting this environment order that will be attached to the corresponding
Release Engineering sprint.</inlineHelpText>
    <label>RelEng Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Environment Orders (RelEng Work)</relationshipLabel>
    <relationshipName>Environment_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>