force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Requested_Delivery_Date__c</fullName>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>