force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Risk_To_The_Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Risk_To_The_Release__c</fullName>
    <inlineHelpText>What is the risk to the release given the chance the environment will be delivered on time?</inlineHelpText>
    <label>Risk To The Release</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>