force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Scheduled_Maintenance_Start__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Maintenance_Start__c</fullName>
    <inlineHelpText>Expected start of work on the environment during which time it would not be usable by the customer.</inlineHelpText>
    <label>Scheduled Maintenance Start</label>
    <type>Date</type>
</CustomField>