force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Schema_Upgrade_Required__c.field-meta.xml
<CustomField>
    <fullName>agf__Schema_Upgrade_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schema Upgrade Required?</label>
    <type>Checkbox</type>
</CustomField>