force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Source_Request__c.field-meta.xml
<CustomField>
    <fullName>agf__Source_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user story against the Environments Office that provides the requirements of this environment order</inlineHelpText>
    <label>Source Request</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Environment Orders</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>