force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>agf__Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>