force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Supporting_Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Supporting_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What release will this environment be supporting?</inlineHelpText>
    <label>Supporting Release</label>
    <referenceTo>agf__ADM_Release__c</referenceTo>
    <relationshipLabel>Environment Orders</relationshipLabel>
    <relationshipName>Environments</relationshipName>
    <type>Lookup</type>
</CustomField>