force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__System_Case__c.field-meta.xml
<CustomField>
    <fullName>agf__System_Case__c</fullName>
    <inlineHelpText>Supportforce case for any system/hardware changes required for this environment request</inlineHelpText>
    <label>System Case</label>
    <type>Url</type>
</CustomField>