force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/fields/agf__Target_Database__c.field-meta.xml
<CustomField>
    <fullName>agf__Target_Database__c</fullName>
    <label>Target Database</label>
    <length>10</length>
    <type>Text</type>
</CustomField>