force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__Environments_Order__c/recordTypes/agf__Environment_Request.recordType-meta.xml
<RecordType>
    <fullName>agf__Environment_Request</fullName>
    <active>true</active>
    <description>The request is logged by the customer to the Environments Office.  From the request, the order can be generated.</description>
    <label>Environment Request</label>
</RecordType>